# finalmetronome

./: AUTHORS  ChangeLog  INSTALL.linux  Makefile.am  Makefile.in  README  README.md  config.h.in  configure  configure.ac
fmodgetver/: Makefile.am  Makefile.in  fmod_getversion.c
libopenmusic/: README  utils.h  wxutils.h
libopentime/: ChQueryPerformance.cpp  ChStdClock.cpp  ChStdTime.cpp  ChTickCount.cpp  ChUnix.cpp  Makefile.am  Makefile.in  TrPOSIX.cpp  TrWinMultimedia.cpp  TrWxWidgets.cpp  create_impl.cpp
release/: create_linux_release.sh
release/data/: config.xml  config.xml~  config_xml_guide.txt  midi2wav.sh
release/data/midi_drumset/: acoustic_bass_drum.mid  acoustic_snare.mid  chinese.mid  closed_hi_hat.mid  cowbell.mid  crash.mid  high_floor_tom.mid  high_mid_tom.mid  high_tom.mid  low_floor_tom.mid  low_mid_tom.mid  low_tom.mid  metronome_bell.mid  metronome_click.mid  open_hi_hat.mid  pedal_hi_hat.mid  ride.mid  side_stick.mid  tambourine.mid
src/: BeatMgr.cpp  BeatSoundMapDlg.cpp  Makefile.am  Makefile.in  MetronomeApp.cpp  MetronomeDlg.cpp  SoundManager.cpp  SoundManagerFMOD.cpp  SoundTimerFunc.cpp  WindowAnimation.cpp  XmlParser.cpp  XmlParserConfig.cpp
